2008-07-22  Sven Herzberg  <sven@imendio.com>

	Fix svn:ignore and the include condition

	* gdk/tests/check-gdk-cairo.c: ifndef => ifdef

2008-07-22  Tor Lillqvist  <tml@novell.com>

	* configure.in: Workaround for what apparently is a bug in MSYS:
	returning -1 from main() is misinterpreted as exit status 0, so
	make sure we return 0 or 1.

2008-07-22  Sven Herzberg  <sven@imendio.com>

	Add a test for my fixes from July 20th.

	* configure.in: create gdk/tests/Makefile
	* gdk/Makefile.am: include the tests subfolder
	* gdk/tests/Makefile.am: create and run my test
	* gdk/tests/check-gdk-cairo.c (test), (main): the test that I wrote
	(passes at least for x11 and quartz backends)

2008-07-22  Frederic Crozat  <fcrozat@mandriva.com>

	* gdk/x11/gdkscreen-x11.c: Don't use RandR 1.2
	if driver is detected as randr12_compat (ie X driver
	is not RandR 1.2 compliant). Fixes multihead with 
	such drivers. Bug #543317.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Default to linking against Xinerama again,
	so that we can fallback to Xinerama when broken X drivers
	make Xrandr useless. Sigh.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.5 ===

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktestutils.c:
	* gtk/gtkscalebutton.c:
	* gtk/gtkmessagedialog.c:
	* gtk/gtkmenu.c:
	* gtk/gtkcontainer.c:
	* gtk/gtkcolorseldialog.c:
	* gtk/gtkaccelgroup.c:
	* gtk/gtkentry.c:
	* gtk/gtkfontsel.c: Fix some doc problems.

2008-07-21  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkbox.c (gtk_box_add): use gtk_box_pack_start() instead of
	the deprecated gtk_box_pack_start_defaults().

	* gtk/gtkbindings.c (gtk_binding_entry_add_signal)
	(gtk_binding_parse_signal): use _gtk_binding_entry_add_signall()
	instead of the deprecated gtk_binding_entry_add_signall().

2008-07-21  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentmanager.c: