@@ -1044,8 +1044,10 @@ int
 main (int argc, char **argv)
 {
   char *content_type;
+  char *image_png;
   content_type = g_content_type_guess (NULL, data, data_size, NULL);  
-  return !!strcmp (content_type, "image/png");
+  image_png = g_content_type_for_mime_type ("image/png");
+  return !!strcmp (content_type, image_png);
 }]])],
   [gio_can_sniff=yes
    AC_DEFINE(GDK_PIXBUF_USE_GIO_MIME, 1, [Define if gio can sniff image data])],
